--- a/frontend/main/style.css
+++ b/frontend/main/style.css
@@ -35,6 +35,7 @@ html, body {
 .navbar-brand.text {
   cursor: pointer;
   color: white;
+  font-size: 25px;
 }
 .navbar-brand.text:hover {
   cursor: pointer;
@@ -114,15 +115,24 @@ html, body {
   padding: 10px;
   width: 120px;
   cursor: pointer;
+}
+
+.systemList .systemList-item a{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  color: black;
+  text-decoration: none;
+}
+
+.systemList .systemList-item a:hover{
+  color: #62B68E;
 }
 
 .systemList .systemList-item:hover{
   border-radius: 10px;
   border: #62B68E 1px solid;
-  color: #62B68E;
   background-color: #f4f9f6;
 }
 
