--- a/frontend/public/css/public.css
+++ b/frontend/public/css/public.css
@@ -39,12 +39,13 @@ body {
 	box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, .05);
 }
 
-img{
+.head{
 	margin-left: 10px;
 	margin-top: 10px;
 	float: left;
 	height: 100px;
 }
+
 
 .title{
 	font-size: 20px;
@@ -71,7 +72,6 @@ img{
 	text-align: center;
 	line-height: 30px;
 	left: 50%;
-	
 	margin-left: -60px;
 	position: absolute;
 	top: 50%;
@@ -106,6 +106,7 @@ img{
 	position: absolute;
 	margin-left: -50px;
 	bottom: 50px;
+	height: 100px;
 }
 
 
