--- a/frontend/entertainment/style.css
+++ b/frontend/entertainment/style.css
@@ -2,18 +2,18 @@
     position: absolute;
     top: 60px;
     left: 0;
-    width:100%; 
-    height: 100%; 
+    width: 100%;
+    height: 100%;
 }
 
-body{
-    width:100%;
-    height:100%;
-    margin:0;
-    padding:0;
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-#btns{
+#btns {
     position: absolute;
     top: 100px;
     left: 20px;
@@ -21,22 +21,21 @@ body{
 
 .type_btn {
     position: relative;
-    display: inline-block; 
-    width: 150px; 
-    outline: 0; 
-    overflow: hidden;  
-    transition: .3s; 
-    cursor: pointer; 
-    user-select: none; 
-    height: 40px; 
-    text-align: center; 
-
-    background: tomato; 
-    color: #fff;  
+    display: inline-block;
+    width: 150px;
+    outline: 0;
+    overflow: hidden;
+    transition: .3s;
+    cursor: pointer;
+    user-select: none;
+    height: 40px;
+    text-align: center;
+    background: tomato;
+    color: #fff;
     border-radius: 10px;
 }
 
-.info{
+.info {
     position: relative;
     top: 0;
     right: 0;
@@ -44,11 +43,210 @@ body{
 }
 
 #nav_bar {
-    
     position: "absolute";
     top: 0;
     left: 0;
     width: 100%;
     height: 60px;
     background-color: #008800;
+}
+
+.wrapper {
+    min-height: 100vh;
+    position: relative;
+    padding-bottom: 50px;
+    min-width: 1100px;
+}
+
+.home-header {
+    background-color: #005925;
+}
+
+.navbar {
+    border: 0;
+    padding-top: 5px;
+    margin: 0 auto;
+    max-width: 1500px;
+    background-color: #005925;
+}
+
+.navbar-brand img {
+    cursor: pointer;
+    width: 130px;
+    position: relative;
+    bottom: 10px;
+}
+
+.navbar-brand.text {
+    cursor: pointer;
+    color: white;
+    font-size: 25px;
+}
+
+.navbar-brand.text:hover {
+    cursor: pointer;
+    color: white;
+}
+
+.navbar-nav.menu .menu-item a {
+    font-size: 17px;
+    color: white !important;
+    margin-left: 10px;
+    transition: border-bottom 0.2s ease-in;
+    border-bottom: transparent 3px solid;
+}
+
+.navbar-nav.menu .menu-item a:hover {
+    border-bottom: rgb(107, 143, 35) 3px solid;
+}
+
+.navbar-nav.menu .menu-item.active a {
+    background-color: #005925 !important;
+    border-bottom: rgb(107, 143, 35) 3px solid;
+}
+
+.dropdown-toggle {
+    background-color: #005925 !important;
+    padding-bottom: 0px !important;
+}
+
+.navbar-nav.navbar-right .avatar {
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    margin-right: 5px;
+    background-color: grey;
+}
+
+.caret {
+    color: white;
+}
+
+.introduction {
+    background-color: #2b6d59;
+    color: white;
+}
+
+.jumbotron {
+    padding: 100px 100px;
+    margin: 0 auto;
+    max-width: 1500px;
+    background-color: #2b6d59;
+}
+
+.btn-lg {
+    margin-top: 20px;
+}
+
+.btn-primary {
+    background-color: #29533f;
+    border: none;
+    transition: background-color 0.3s;
+}
+
+.btn-primary:hover {
+    background-color: #05441f;
+}
+
+.mid-label {
+    height: 75px;
+    margin: 0 auto;
+    line-height: 75px;
+    font-size: 25px;
+    text-align: center;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.service-cards-container {
+    max-width: 1500px;
+    margin: 50px auto;
+}
+
+.systemList {
+    display: flex;
+    list-style: none;
+}
+
+.systemList .systemList-item {
+    padding: 10px;
+    width: 120px;
+    cursor: pointer;
+}
+
+.systemList .systemList-item a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    text-decoration: none;
+}
+
+.systemList .systemList-item a:hover {
+    color: #62B68E;
+}
+
+.systemList .systemList-item:hover {
+    border-radius: 10px;
+    border: #62B68E 1px solid;
+    background-color: #f4f9f6;
+}
+
+.systemList .img-circle {
+    width: 70px;
+    height: 70px;
+    margin-bottom: 30px;
+    border-radius: 50%;
+    box-shadow: 0px 2px 7px 0px rgba(87, 177, 134, 0.24);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.systemList .system-icon {
+    width: 30px;
+}
+
+.systemList .system-text {
+    text-align: center;
+}
+
+.service-area {
+    margin: auto;
+    max-width: 1500px;
+}
+
+.service-area .service-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.service-item .service-describe {
+    padding: 50px;
+    text-indent: 2em;
+    width: 700px;
+    font-size: 30px;
+}
+
+.service-item img {
+    width: 700px;
+    height: 500px;
+    border-radius: 3%;
+}
+
+@media screen and (max-width: 1100px) {
+    .service-area .service-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 50px;
+    }
+    .service-item .service-describe {
+        order: 100;
+    }
 }
