--- a/frontend/SchoolPlace/schoolPlace/css/style.css
+++ b/frontend/SchoolPlace/schoolPlace/css/style.css
@@ -5,6 +5,12 @@ body {
 	height: 100vh;
 }
 
+#mapcontent {
+	background-color: #000000;
+	width: 100%;
+	height: 87vh;
+}
+
 #searchinput {
 	width: 300px; 
 	height: 30px; 
