--- a/frontend/Consulting/css/layout.css
+++ b/frontend/Consulting/css/layout.css
@@ -30,7 +30,7 @@
 
 .body{
 	width: 100%;
-	position: relative;
+	position: absolute;
 	height: 1500px;
 }
 
@@ -53,16 +53,7 @@
 	float:left;
 }
 
-.foot{
-	width: 100%;
-	height: 51px;
-	background-color: #005826;
-	color: #ffffff;
-	text-align: center;
-	position: relative;
-	bottom: 0px;
-	line-height: 51px;
-}
+
 
 .nav_bar{
 
@@ -75,7 +66,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  bottom: 0;
+  bottom: 0px;
   width: 100%;
   height: 50px;
   color: white;
